# py_test_uv_project

./: README.md  gapminder_data.R  gapminder_data.parquet  main.py  polars_test_gapminder.py  pyomo_production_mix_problem  pyomo_production_mix_problem_generic  pyomo_production_mix_problem_generic.qmd  pyomo_the_poetry_problem.qmd  pyproject.toml  the_poetry_problem.py
